--- a/journal/202301.md
+++ b/journal/202301.md
@@ -64,7 +64,13 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-- {}
+- Optimized the [Address Manager](https://github.com/decred/dcrd/pull/3047) by setting a minimum value to mitigate excessive CPU usage when the number of attempts for a 'KnownAddress' became too large.
+- Added a [missing break](https://github.com/decred/dcrd/pull/3047) after selecting a random address from the Address Manager.
+- No longer use the [ioutil package](https://github.com/decred/dcrd/pull/3046), which is deprecated since Go 1.16.
+- Finished [docker documentation](https://github.com/decred/dcrd/pull/3045).
+- Modified the 'entrypoint' [app signals](https://github.com/decred/dcrd/pull/3044) used by the Docker image to forward 'SIGTERM' to the running instance so it shuts down gracefully when a container is stopped.
+- Updated the [docker image](https://github.com/decred/dcrd/pull/3043) to golang:1.19.5-alpine3.17.
+- Modified the method that [prunes](https://github.com/decred/dcrd/pull/3042) expired mempool transactions to accept the current best height as opposed to looking it up internally.
 
 
 ### dcrwallet
