Dev add more tasks

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -43,6 +43,10 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 { _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
+## Bison Relay v0.1.3
+
+{ highlights, incl. AppImage build, link to YT overview vid }
+
 
 ## Development
 
@@ -70,7 +74,9 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - Finished [docker documentation](https://github.com/decred/dcrd/pull/3045).
 - Modified the 'entrypoint' [app signals](https://github.com/decred/dcrd/pull/3044) used by the Docker image to forward 'SIGTERM' to the running instance so it shuts down gracefully when a container is stopped.
 - Updated the [docker image](https://github.com/decred/dcrd/pull/3043) to golang:1.19.5-alpine3.17.
-- Modified the method that [prunes](https://github.com/decred/dcrd/pull/3042) expired mempool transactions to accept the current best height as opposed to looking it up internally.
+- Modified the method that [prunes](https://github.com/decred/dcrd/pull/3042) expired mempool transactions to accept the current best height as opposed to looking it up internally. { _not big, may merge with other refactoring_ }
+
+{ _^ sort oldest first_ }
 
 
 ### dcrwallet
@@ -134,6 +140,11 @@ Pi-ui { pi-ui action is small this time, maybe merge into the list above }:
 - [Fixes](https://github.com/decred/pi-ui/pull/476) to to the 'datepicker v2' timer on testnet.
 - 1 Typo fix
 
+{ _^ sort oldest first_ }
+
+{ image candidates: 2884 2887 }
+
+
 ### cspp
 
 _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
@@ -145,6 +156,8 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 if the client and server used different sizes of the unassigned integer type, such
 as a 32-bit client connecting to a 64-bit server.
 - Wrap 'sendDeadline' [errors](https://github.com/decred/cspp/pull/79) with the IP and message type. { _too cryptic, explain_ }
+
+{ _^ sort oldest first_ }
 
 
 ### DCRDEX
@@ -221,7 +234,7 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 { _Check_ https://github.com/decred/dcrdocs/commits/master }
 
-- Various [typo corrections](https://github.com/decred/dcrdocs/pull/1213).
+- Various [typo corrections](https://github.com/decred/dcrdocs/pull/1213). { _minor but otoh a new contributor, think if drop or keep_ }
 - Added [on-chain governance and Politeia paragraphs](https://github.com/decred/dcrdocs/pull/1212) to history documentation. Also added timeline points.
 
 
@@ -233,10 +246,10 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 - [Updated](https://github.com/decred/dcrweb/pull/1108) to hugo 0.110.0.
 - Tidied up i18n language files by [replacing](https://github.com/decred/dcrweb/pull/1107) escaped quotation marks to reduce the possibility of mistakes.
-- Removed the [GoDCR SPV wallet](https://github.com/decred/dcrweb/pull/1104). This wallet is no longer supported/updated as result of the [GoDCR: Golang Desktop and Mobile Wallets (2022-2023) proposal](https://proposals.decred.org/record/0ef42e5) failing to pass.
-- Added [Bison Relay press release](https://github.com/decred/dcrweb/pull/1103).
+- Removed the [GoDCR SPV wallet](https://github.com/decred/dcrweb/pull/1104). This wallet is no longer supported/updated as result of the [GoDCR: Golang Desktop and Mobile Wallets (2022-2023) proposal](https://proposals.decred.org/record/0ef42e5) failing to pass. { _move to Eco_ }
+- Added [Bison Relay press release](https://github.com/decred/dcrweb/pull/1103). { _move to Media_ }
 - Added 5 [coverage items](https://github.com/decred/dcrweb/pull/1105).
-- Added 5 [software releases](https://github.com/decred/dcrweb/pull/1105).
+- Added 5 [software releases](https://github.com/decred/dcrweb/pull/1105). { _drop or merge into a single bullet for News updates. generally content maint is not so much "development" so we reduce that in Dev_ }
 
 
 ### Bison Relay
@@ -259,6 +272,9 @@ Work on the Matrix bridge has started.
 ### Timestamply
 
 { _add summary here and in template_ }
+
+- https://github.com/decred/dcrtimegui
+- https://github.com/decred/dcrtimegui/pull/151
 
 { image candidate: nice screenshot of the remake }
 
