Dev dcrd tweak text

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -68,13 +68,13 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-- Modified the method that [prunes](https://github.com/decred/dcrd/pull/3042) expired mempool transactions to accept the current best height as opposed to looking it up internally. { _not big, may merge with other refactoring_ }
-- Updated the [docker image](https://github.com/decred/dcrd/pull/3043) to golang:1.19.5-alpine3.17.
-- Modified the 'entrypoint' [app signals](https://github.com/decred/dcrd/pull/3044) used by the Docker image to forward 'SIGTERM' to the running instance so it shuts down gracefully when a container is stopped.
-- Finished [docker documentation](https://github.com/decred/dcrd/pull/3045).
-- No longer use the [ioutil package](https://github.com/decred/dcrd/pull/3046), which is deprecated since Go 1.16.
-- Added a [missing break](https://github.com/decred/dcrd/pull/3047) after selecting a random address from the Address Manager.
-- Optimized the [Address Manager](https://github.com/decred/dcrd/pull/3047) by setting a minimum value to mitigate excessive CPU usage when the number of attempts for a 'KnownAddress' became too large.
+- Modified the method that [prunes expired transactions](https://github.com/decred/dcrd/pull/3042) from the mempool to accept the current best height as opposed to looking it up internally. This is part of a bigger effort to make mempool state easier to reason about by removing hidden assumptions.
+- Updated the [Docker image](https://github.com/decred/dcrd/pull/3043) to newer versions of Go and Alpine Linux.
+- Configured the Docker container to [forward SIGTERM signal](https://github.com/decred/dcrd/pull/3044) to the running dcrd instance so it shuts down gracefully when a container is stopped.
+- Improved and extended [Docker documentation](https://github.com/decred/dcrd/pull/3045).
+- Updated JSON-RPC [API docs](https://github.com/decred/dcrd/pull/3046) to remove usages of the deprecated `ioutil` package. { _minor, merge_ }
+- Added a [missing break](https://github.com/decred/dcrd/pull/3047) after selecting a random address from the Address Manager. {_minor, merge into bullet below_ }
+- Optimized selection of peers in the address manager to mitigate [high CPU use](https://github.com/decred/dcrd/pull/3047) discovered by testing the DEX with an SPV DCR wallet.
 
 
 ### dcrwallet
