--- a/journal/202301.md
+++ b/journal/202301.md
@@ -83,13 +83,7 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 
 { _Check_ https://github.com/decred/dcrwallet/commits/master }
 
-- Added a [watchlast option](https://github.com/decred/dcrwallet/pull/2196) to limit initially watched addresses, which in turn improves startup resource usage and performance.
-
-Very large wallets have many addresses that may not be needed anymore,
-but these addresses were always being loaded into the address
-transaction filters. The watchlast option counts backwards from the current address index of every HD account branch, and ignores loading addresses prior to the cutoff during the initial sync.
-
-{ _^simplify, most implementation details are not needed four our level of coverage. also join the lines and make everything a single bullet._ }
+- Added a [watchlast option](https://github.com/decred/dcrwallet/pull/2196) to limit initially watched addresses, which in turn improves startup resource usage and performance. This will benefit very large wallets with many old addresses that are not expected to be used again.
 
 
 ### dcrctl
