Dev move some dcrweb to Eco and Media, tweak

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -212,12 +212,8 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 { _Check_ https://github.com/decred/dcrweb/commits/master }
 
-- Added 5 [software releases](https://github.com/decred/dcrweb/pull/1105). { _drop or merge into a single bullet for News updates. generally content maint is not so much "development" so we reduce that in Dev_ }
-- Added 5 [coverage items](https://github.com/decred/dcrweb/pull/1105).
-- Added [Bison Relay press release](https://github.com/decred/dcrweb/pull/1103). { _move to Media_ }
-- Removed the [GoDCR SPV wallet](https://github.com/decred/dcrweb/pull/1104). This wallet is no longer supported/updated as result of the [GoDCR: Golang Desktop and Mobile Wallets (2022-2023) proposal](https://proposals.decred.org/record/0ef42e5) failing to pass. { _move to Eco_ }
 - Tidied up i18n language files by [replacing](https://github.com/decred/dcrweb/pull/1107) escaped quotation marks to reduce the possibility of mistakes.
-- [Updated](https://github.com/decred/dcrweb/pull/1108) to hugo 0.110.0.
+- Updated [Hugo](https://github.com/decred/dcrweb/pull/1108) version.
 
 
 ### Bison Relay
@@ -370,6 +366,8 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Check https://github.com/decred/dcrweb/commits/master for added/removed services._ }
 
+- Removed the [GoDCR SPV wallet](https://github.com/decred/dcrweb/pull/1104) from the [Wallets page](https://decred.org/wallets/). Download links are no longer working and this wallet is no longer supported/updated as result of the [GoDCR proposal](https://proposals.decred.org/record/0ef42e5) failing to pass. [Source code](https://github.com/planetdecred/godcr) is still available.
+
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -424,7 +422,7 @@ Secured the following media placements:
 
 **Selected articles:**
 
-- {}
+- https://decred.org/news/2022-12-15-decred-launches-bison-relay/ { merged in Jan }
 
 **Videos:**
 
