--- a/journal/202301.md
+++ b/journal/202301.md
@@ -227,10 +227,50 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer 
 
 }
 
+v0.1.3 GUI changes:
+
+- Added build scripts for [Linux](https://github.com/companyzero/bisonrelay/pull/85) (AppImage and tar) and [Windows](https://github.com/companyzero/bisonrelay/pull/88) (MSIX).
+- Subscribing and unsubscribing to posts made [asynchronous](https://github.com/companyzero/bisonrelay/pull/86). This properly handles the case where the target user is offline and will take long time to reply to the subscription request.
+- Added proper [launcher icons](https://github.com/companyzero/bisonrelay/pull/94) for various platforms.
+- Improved indicators and sorting in the [chat list](https://github.com/companyzero/bisonrelay/pull/101).
+- Added [Go back](https://github.com/companyzero/bisonrelay/pull/112) button to Advanced Settings and Restore views.
+- Upgraded to newer Dart and Flutter [libraries](https://github.com/companyzero/bisonrelay/pull/114) and pinned their hashes.
+
+v0.1.3 GUI fixes:
+
+- Error messages can now be [copied](https://github.com/companyzero/bisonrelay/pull/72) and pasted in bug reports.
+- Opening new channels will be [prevented](https://github.com/companyzero/bisonrelay/pull/73) while there are pending channels bing opened. Improved error messages will better explain reasons why channels cannot be opened (it [confused](https://github.com/companyzero/bisonrelay/issues/11) new users during onboarding).
+- Fixed [server address](https://github.com/companyzero/bisonrelay/pull/81) on the new config page.
+- Fixed error when trying to transfer a [large paid download](https://github.com/companyzero/bisonrelay/pull/91).
+- Fixed [autofocus and submit with Enter](https://github.com/companyzero/bisonrelay/pull/92) when starting the app.
+- [Fixed](https://github.com/companyzero/bisonrelay/pull/96) unclickable links in post comments, context menu staying open, and images not showing in posts list.
+- Fixed odd [trailing character](https://github.com/companyzero/bisonrelay/pull/100) after links.
+- Fixed rendering of [line breaks](https://github.com/companyzero/bisonrelay/pull/113). { _merge?_ }
+- { 103 } other fixes.
+
+v0.1.3 command-line app changes:
+
+- Added `/timestats` command that reports [timing statistics](https://github.com/companyzero/bisonrelay/pull/) for LN payments and sending outbound messages.
+- Show [advertised addresses](https://github.com/companyzero/bisonrelay/pull/82) for LN nodes queried with `/svrnode` and `/queryroute` commands.
+- Subscribing and unsubscribing to posts made [asynchronous](https://github.com/companyzero/bisonrelay/pull/86).
+- Added an API for [controlling brclient](https://github.com/companyzero/bisonrelay/pull/84) from third party tools. This allows to write bots (such as the Matrix bridge bot) and other integrations. See API documentation and examples [here](https://github.com/companyzero/bisonrelay/tree/0d85ba164376fb5e4c3351c0d7cb76c09a52583b/clientrpc).
+
+v0.1.3 command-line app fixes:
+
+- Fixed file send being logged to [wrong window](https://github.com/companyzero/bisonrelay/pull/71) and fixed result of `/winlist` command.
+- [Clear certificate field](https://github.com/companyzero/bisonrelay/pull/90) when setting a custom LN liquidity provider address.
+- Fixed error when trying to transfer a [large purchased file](https://github.com/companyzero/bisonrelay/pull/91).
+- { 83 87 } other fixes.
+
+v0.1.3 server changes:
+
+- Support listening to [multiple addresses](https://github.com/companyzero/bisonrelay/pull/89) for connections.
+
+Other stuff:
+
 - { What happens when you send a message https://twitter.com/BisonDigest/status/1609882842871500804 - here or in (Media OR Discussions) or in both places? }
 - { check https://twitter.net/BisonDigest for Jan goodies }
-
-Work on the Matrix bridge has started.
+- Two-way Bison Relay to Matrix bridge is live in #br, #random and #trading chat rooms.
 
 
 ### Timestamply
