Dev polish, add images

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -16,7 +16,7 @@ Highlights for January: { _no links here, 5-7 bullets max._
 
 - Proposals (spawn own Highlights bullets as needed)
 
-- 
+- BR "quality of life" release v0.1.3
 
 - 
 
@@ -42,6 +42,7 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 ## { Some Announcement }
 
 { _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
+
 
 ## Bison Relay v0.1.3
 
@@ -70,7 +71,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by command-line and graphical wallet apps._
 
-- Added a [watchlast option](https://github.com/decred/dcrwallet/pull/2196) to limit initially watched addresses, which in turn improves startup resource usage and performance. This will benefit very large wallets with many old addresses that are not expected to be used again.
+- Added a [`watchlast` option](https://github.com/decred/dcrwallet/pull/2196) to limit initially watched addresses, which in turn improves startup resource usage and performance. This will benefit very large wallets with many old addresses that are not expected to be used again.
 
 
 ### Politeia
@@ -81,10 +82,10 @@ All changes below are towards the GUI remake on the new [plugin architecture](ht
 
 Re-implemented pages:
 
-- [User Details](https://github.com/decred/politeiagui/pull/2884) page (with 7 tabs). All visual feedbacks, modals, and messages have been refactored, common UI elements extracted for reuse, several UI and responsiveness issues fixed, minor design improvements.
+- [User Details](https://github.com/decred/politeiagui/pull/2884) pages. All visual feedbacks, modals, and messages have been refactored, common UI elements extracted for reuse, several UI and responsiveness issues fixed, minor design improvements.
 - [User session pages](https://github.com/decred/politeiagui/pull/2887), including Signup, Login, Logout, Password Reset, and Verify Email.
 - [Admin pages](https://github.com/decred/politeiagui/pull/2891) for Unvetted Proposals and Search for Users.
-- [Proposal pages](https://github.com/decred/politeiagui/pull/2892) including Edit and Raw view.
+- [Proposal pages](https://github.com/decred/politeiagui/pull/2892) including Edit and Raw pages.
 - There is a [master issue](https://github.com/decred/politeiagui/issues/2875) tracking which pages have been reimplemented.
 
 Other changes:
@@ -95,13 +96,17 @@ Other changes:
 
 { image candidates: 2884 2887 }
 
+![](https://user-images.githubusercontent.com/22639213/209404782-5b954537-7ce2-4169-b95d-a744182c9b10.png) { upload }
+
+_Image: User account page in the Politeia GUI remake._
+
 
 ### cspp
 
 _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
 
 - Capture IP address and message type when [sending to client fails](https://github.com/decred/cspp/pull/79).
-- Fixed a [protocol bug](https://github.com/decred/cspp/pull/80) which caused signature validation failures if the client and server used different sizes of the integer type, such as a 32-bit client connecting to a 64-bit server.
+- Fixed a [protocol bug](https://github.com/decred/cspp/pull/80) which caused signature validation failures if the client and server used different sizes of the integer type, such as a 32-bit client connecting to a 64-bit server. This fix is a breaking change to the protocol (clients will need to upgrade to use the fix).
 - Updated to [latest](https://github.com/decred/cspp/pull/81) dcrd modules.
 
 
@@ -112,8 +117,8 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 Client changes:
 
 - Updated [web dependencies](https://github.com/decred/dcrdex/pull/1996).
-- Updated Docker config: [optimized base images](https://github.com/decred/dcrdex/pull/2030), switched DEX client to [run as non-root user](https://github.com/decred/dcrdex/pull/2035), and [excluded unneeded files](https://github.com/decred/dcrdex/pull/2077). Among other things it helps to integrate the DEX client into Umbrel. { prop link }
-- Allow to [acknowledge and hide](https://github.com/decred/dcrdex/pull/2044) the warning to keep the DEX client running until all trades settle.
+- Updated Docker config: [optimized base images](https://github.com/decred/dcrdex/pull/2030), switched DEX client to [run as non-root user](https://github.com/decred/dcrdex/pull/2035), and [excluded unneeded files](https://github.com/decred/dcrdex/pull/2077). Among other things it helps to integrate the DEX client [into Umbrel](https://proposals.decred.org/record/8d83046).
+- Allow to [acknowledge and hide](https://github.com/decred/dcrdex/pull/2044) the warning that reminds to keep the DEX client running until all trades settle.
 - Improved checkbox UX with [uniform style](https://github.com/decred/dcrdex/pull/2002) across all forms.
 - Show [which wallet](https://github.com/decred/dcrdex/pull/2071) is missing if it was not found on startup.
 - Added consistent [border](https://github.com/decred/dcrdex/pull/2070) to all input fields, drop downs, and checkboxes.
@@ -122,10 +127,10 @@ Client changes:
 
 Client fixes:
 
-- Fixed confusing [sync progress](https://github.com/decred/dcrdex/pull/2008) jumps after disconnecting from all SPV peers.
-- Improved detection and handling of refund transactions that were [broadcast manually](https://github.com/decred/dcrdex/pull/2011) outside of the DEX client.
+- Fixed confusing [sync progress](https://github.com/decred/dcrdex/pull/2008) jumps after losing connections with all SPV peers.
+- Improved detection and handling of refund transactions that have been [broadcast manually](https://github.com/decred/dcrdex/pull/2011) by the user (outside of the DEX client).
 - Fixed launch failure on [32-bit systems](https://github.com/decred/dcrdex/pull/2031).
-- Fixed directory paths that blocked built-in SPV wallets created in v0.5 from upgrading in the upcoming v0.6.
+- Fixed [directory paths](https://github.com/decred/dcrdex/pull/2018) that blocked built-in SPV wallets created in v0.5 from upgrading in the upcoming v0.6.
 - Fixed creation of [Decred SPV](https://github.com/decred/dcrdex/pull/2093) wallet over RPC. { _minor, merge_ }
 - Fixed { 2082 2083 2079 } data races and { 2078 } deadlocks in the client. { _maybe present collectively as 'concurrency bugs'_ }
 
@@ -136,9 +141,9 @@ Server fixes:
 
 Other changes:
 
-- Updated the [Fundamentals](https://github.com/decred/dcrdex/pull/2001) spec page.
+- Updated the [Fundamentals](https://github.com/decred/dcrdex/pull/2001) spec page (latest version [here](https://github.com/decred/dcrdex/blob/master/spec/fundamentals.mediawiki)).
 - Moved [compatibility checks](https://github.com/decred/dcrdex/pull/2052) to `dex/networks` package. { _minor, merge_ }
-- https://github.com/decred/dcrdex/pull/2061 { _minor, drop_ }
+- README fix https://github.com/decred/dcrdex/pull/2061 { _minor, drop_ }
 
 Ethereum:
 
@@ -170,7 +175,7 @@ _Image: Improved fee estimation for tokens in DCRDEX._
 
 _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [user documentation](https://docs.decred.org/)._
 
-- Added [on-chain governance and Politeia paragraphs](https://github.com/decred/dcrdocs/pull/1212) to history documentation. Also added timeline points.
+- Added [on-chain governance and Politeia paragraphs](https://github.com/decred/dcrdocs/pull/1212) to [Project History](https://docs.decred.org/getting-started/project-history/) page. Also added timeline points.
 - Various [typo corrections](https://github.com/decred/dcrdocs/pull/1213). { _minor but otoh a new contributor, think if drop or keep_ }
 
 
@@ -186,14 +191,16 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer social media platform with strong protections against censorship, surveillance, and advertising, powered by Decred Lightning Network._
 
+New [v0.1.3 release](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.3) has brought many bug fixes and quality of life improvements discovered during early community testing.
+
 v0.1.3 GUI changes:
 
-- Added build scripts for [Linux](https://github.com/companyzero/bisonrelay/pull/85) (AppImage and tar) and [Windows](https://github.com/companyzero/bisonrelay/pull/88) (MSIX).
+- Added builds for [Linux](https://github.com/companyzero/bisonrelay/pull/85) (AppImage and tar) and [Windows](https://github.com/companyzero/bisonrelay/pull/88) (MSIX).
 - Subscribing and unsubscribing to posts made [asynchronous](https://github.com/companyzero/bisonrelay/pull/86). This properly handles the case where the target user is offline and will take long time to reply to the subscription request.
-- Added proper [launcher icons](https://github.com/companyzero/bisonrelay/pull/94) for various platforms.
-- Improved indicators and sorting in the [chat list](https://github.com/companyzero/bisonrelay/pull/101).
+- Added proper [launcher icons](https://github.com/companyzero/bisonrelay/pull/94) for various operating systems.
+- Improved unread indicators and sorting in the [chat list](https://github.com/companyzero/bisonrelay/pull/101).
 - Added [Go back](https://github.com/companyzero/bisonrelay/pull/112) button to Advanced Settings and Restore views.
-- Upgraded to newer Dart and Flutter [libraries](https://github.com/companyzero/bisonrelay/pull/114) and pinned their hashes.
+- Upgraded to newer Dart and Flutter [libraries](https://github.com/companyzero/bisonrelay/pull/114) and pinned their hashes for more reliable builds.
 
 v0.1.3 GUI fixes:
 
@@ -201,7 +208,7 @@ v0.1.3 GUI fixes:
 - Opening new channels will be [prevented](https://github.com/companyzero/bisonrelay/pull/73) while there are pending channels bing opened. Improved error messages will better explain reasons why channels cannot be opened (it [confused](https://github.com/companyzero/bisonrelay/issues/11) new users during onboarding).
 - Fixed [server address](https://github.com/companyzero/bisonrelay/pull/81) on the new config page.
 - Fixed error when trying to transfer a [large paid download](https://github.com/companyzero/bisonrelay/pull/91).
-- Fixed [autofocus and submit with Enter](https://github.com/companyzero/bisonrelay/pull/92) when starting the app.
+- Fixed missing [autofocus on the Password field](https://github.com/companyzero/bisonrelay/pull/92) shown after app startup. Also the password can be submitted with the Enter key now.
 - [Fixed](https://github.com/companyzero/bisonrelay/pull/96) unclickable links in post comments, context menu staying open, and images not showing in posts list.
 - Fixed odd [trailing character](https://github.com/companyzero/bisonrelay/pull/100) after links.
 - Fixed rendering of [line breaks](https://github.com/companyzero/bisonrelay/pull/113). { _merge?_ }
