Dev Timestamply about text

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -241,7 +241,7 @@ Other stuff:
 
 ### Timestamply
 
-{ _add summary here and in template_ }
+_[Timestamply](https://github.com/decred/dcrtimegui) is a free service for timestamping files powered by Decred blockchain. A timestamp proves that a certain file has existed at a certain moment of time. This has a range of applications in protecting data integrity._
 
 - https://github.com/decred/dcrtimegui
 - https://github.com/decred/dcrtimegui/pull/151
