--- a/journal/202301.md
+++ b/journal/202301.md
@@ -243,8 +243,22 @@ Other stuff:
 
 _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for timestamping files powered by Decred blockchain. A timestamp proves that a certain file has existed at a certain moment of time. This has a range of applications in protecting data integrity._
 
-- https://github.com/decred/dcrtimegui
-- https://github.com/decred/dcrtimegui/pull/151
+dcrtimegui was rebranded as Timestamply and the app received a [full redesign](https://github.com/decred/dcrtimegui/pull/151). Some of the new features include:
+
+- New graphical design by matching Decred design standards developed for Decrediton, Politeia and decred.org remake.
+- Light and dark modes.
+- Multiple languages, including initial Portuguese translation.
+- Separate Timestamp and Verify pages.
+- Display of next anchoring time (it wasn't clear that anchoring is done hourly).
+- Latest Hashes section.
+- Improved UX for downloading multiple proofs.
+- List of hashes timestamped and verified by the user.
+- Transaction confirmations progress for each hash.
+- Improved drop zone.
+
+Timestamply redesign arrived soon after the app has received some attention from [Brazilian politicians](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) who timestamped PDF files with their government plans to combat misinformation spreading via fake versions of the files.
+
+The [proposal](https://proposals.decred.org/record/855a506) to fund the new version has been approved and it is awaiting deployment to [timestamp.decred.org](https://timestamp.decred.org/). Until then users can try the upcoming version on the [test website](https://dcrtimegui-redesign.netlify.app/). Be aware that the test website uses a different database and may not find hashes timestamped by the current version of the app.
 
 { image candidate: nice screenshot of the remake }
 
