--- a/journal/202301.md
+++ b/journal/202301.md
@@ -349,17 +349,21 @@ See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at 64 Ph/s and peaking at 93 Ph/s throughout the month.
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of 81 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Feb 1: Poolin 64%, F2Pool 30%, BTC.com 4%, AntPool 2%, CoinMine 0.4%.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Feb 1: Poolin 61%, F2Pool 31%, AntPool 4%, BTC.com 3%, CoinMine 0.4%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}).
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 140-298 DCR, with 30-day [average](https://dcrstats.com/) at 212.5 DCR (-22.3).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
+{ tix price chart }
+
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.93-9.71 million DCR, meaning that 59.9-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
+
+{ locked DCR and % chart }
 
 { _Add a recap of ticket price action if it was interesting._ }
 
