--- a/journal/202301.md
+++ b/journal/202301.md
@@ -349,7 +349,7 @@ See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at 64 Ph/s and peaking at 93 Ph/s throughout the month.
+**Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~80 Ph/s and closed ~76 Ph/s, bottoming at 64 Ph/s and peaking at 93 Ph/s throughout the month.
 
 Distribution of 81 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Feb 1: Poolin 64%, F2Pool 30%, BTC.com 4%, AntPool 2%, CoinMine 0.4%.
 
@@ -367,15 +367,19 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: The [{} listed VSPs](https://decred.org/vsp/) collectively managed ~{n} (+{n}) live tickets, which was {n.n}% of the ticket pool (+{n.n}%) as of {date}.
+**VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~8,390 (+1,270) live tickets, which was 18.8% of the ticket pool (+1.6%) as of Feb 1. At the time of the snapshot the ticked pool had ~44,670 tickets, a whopping 9% above the [target](https://docs.decred.org/proof-of-stake/overview/) 40,960.
 
-{ _Optional: mention biggest gainers_ }
+Biggest gainers in January are vspd.99split.com (+419), dcrhive.com (+328) and vsp.stakeminer.com (+319).
 
-**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed {} dcrd nodes on {date}: v{} - {n}%, ...
+**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 187 dcrd nodes on Feb 1: v1.7.5 - 33%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 9%, v1.7.4 - 3%, other - 8%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between {n}-{n}K DCR.
+{ nodes chart + explain our incorrect data in few past months }
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.9-61.6%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 140-611K DCR.
+
+{ mixed DCR chart }
+
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 147 nodes (+17), 261 channels (+28) with a total capacity of 106.1 DCR (+5.4), as of Feb 1. These stats vary depending on the LN node. For example, @karamble's node reported 163 nodes (+19), 347 channels (+35) and 159.7 DCR (+5.7) capacity on same Feb 1.
 
 { _Add any interesting analysis or events in the network._ }
 
