--- a/journal/202301.md
+++ b/journal/202301.md
@@ -347,31 +347,61 @@ See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055
 
 **Hashrate**: January's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~80 Ph/s and closed ~76 Ph/s, bottoming at 64 Ph/s and peaking at 93 Ph/s throughout the month.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Network_Daily_Hashrate.png) { upload }
+
+_Image: Decred hashrate._
+
 Distribution of 81 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Feb 1: Poolin 64%, F2Pool 30%, BTC.com 4%, AntPool 2%, CoinMine 0.4%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Feb 1: Poolin 61%, F2Pool 31%, AntPool 4%, BTC.com 3%, CoinMine 0.4%.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Hashrate%20Distribution%20(Phs).png) { upload }
+
+_Image: Pool hashrate distribution._
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Daily_Hash_Dist.png) { upload }
+
+_Image: Historical pool hashrate distribution._
+
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 140-298 DCR, with 30-day [average](https://dcrstats.com/) at 212.5 DCR (-22.3).
 
-{ tix price chart }
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Staking_Daily_TicketPrice_DCR.png) { upload }
+
+_Image: Ticket price went wild._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.93-9.71 million DCR, meaning that 59.9-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
-{ locked DCR and % chart }
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Staking_Daily_TicketPoolVal_DCR.png) { upload }
 
-{ _Add a recap of ticket price action if it was interesting._ }
+_Image: Drop and recovery of DCR locked in PoS._
+
+{ _Recap of ticket price action, mention ticket pool vs target._ }
 
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~8,390 (+1,270) live tickets, which was 18.8% of the ticket pool (+1.6%) as of Feb 1. At the time of the snapshot the ticked pool had ~44,670 tickets, a whopping 9% above the [target](https://docs.decred.org/proof-of-stake/overview/) 40,960.
 
 Biggest gainers in January are vspd.99split.com (+419), dcrhive.com (+328) and vsp.stakeminer.com (+319).
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
+
+_Image: Distribution of tickets managed by VSPs._
+
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 187 dcrd nodes on Feb 1: v1.7.5 - 33%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 9%, v1.7.4 - 3%, other - 8%.
 
-{ nodes chart + explain our incorrect data in few past months }
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Daily_NodeDistribution.png) { upload }
+
+_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. NOTE: Data between {} and {} was incorrect._
+
+{ explain our incorrect data in few past months }
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 59.9-61.6%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 140-611K DCR.
 
-{ mixed DCR chart }
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Stakeshuffle_Daily_MixedUnspent_DCR.png) { upload }
+
+_Image: Mixed and unspent DCR has dropped slightly._
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-01/700/Stakeshuffle_Daily_Volume_DCR.png) { upload }
+
+_Image: Mixed daily volume varied more than average._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 147 nodes (+17), 261 channels (+28) with a total capacity of 106.1 DCR (+5.4), as of Feb 1. These stats vary depending on the LN node. For example, @karamble's node reported 163 nodes (+19), 347 channels (+35) and 159.7 DCR (+5.7) capacity on same Feb 1.
 
