--- a/journal/202301.md
+++ b/journal/202301.md
@@ -484,11 +484,11 @@ Secured the following media placements:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [Bison Relay 0.1 News Feed - Connecting, creating and using markdown](https://youtu.be/NuKVAp4fIBY) by @PhoenixGreen
-- [Built-in Payment System - Bison Relay](https://youtu.be/aZvnd5BvEBs) by @PhoenixGreen
-- [Bison Relay - Manage Content](https://youtu.be/1gNc_DLCddc) by @PhoenixGreen
-- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://youtu.be/VYDPCbb5VhE) by @CryptoSlate feat @jy-p
-- [Bison Relay updates to version 0.1.3](https://youtu.be/EWNW91_rp1w) by @PhoenixGreen
+- [Bison Relay 0.1 News Feed - Connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY) by @PhoenixGreen
+- [Built-in Payment System - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @PhoenixGreen
+- [Bison Relay - Manage Content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @PhoenixGreen
+- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by @CryptoSlate feat @jy-p
+- [Bison Relay updates to version 0.1.3](https://www.youtube.com/watch?v=EWNW91_rp1w) by @PhoenixGreen
 
 **Audio:**
 
