Media Videos add links to text versions

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -485,10 +485,11 @@ Secured the following media placements:
 { _Add links to text posts on DM when available for the videos_ }
 
 - [Bison Relay 0.1 News Feed - Connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY) by @phoenixgreen
-- [Built-in Payment System - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @phoenixgreen
-- [Bison Relay - Manage Content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @phoenixgreen
-- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by CryptoSlate feat. @jy-p
-- [Bison Relay updates to version 0.1.3](https://www.youtube.com/watch?v=EWNW91_rp1w) by @phoenixgreen
+- [Built-in Payment System - Bison Relay](https://www.youtube.com/watch?v=aZvnd5BvEBs) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/built-in-payment-system-bison-relay/)
+- [Bison Relay - Manage Content](https://www.youtube.com/watch?v=1gNc_DLCddc) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-manage-content/)
+- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://www.youtube.com/watch?v=VYDPCbb5VhE) by CryptoSlate feat @jy-p
+- [Bison Relay updates to version 0.1.3](https://www.youtube.com/watch?v=EWNW91_rp1w) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/bison-relay-updates-to-version-0-1-3/)
+
 
 **Audio:**
 
