Media add Articles

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -476,7 +476,16 @@ Secured the following media placements:
 
 **Selected articles:**
 
-- https://decred.org/news/2022-12-15-decred-launches-bison-relay/ { merged in Jan }
+- [Decred Launches Bison Relay: A Private, Censorship-Resistant Social Media and Messaging Platform](https://decred.org/news/2022-12-15-decred-launches-bison-relay/)
+- [Future is here? A talk with OpenAI about the crypto market](https://www.decredmagazine.com/future-is-here-a-talk-with-openai-about-the-crypto-market/) by @Joao
+- [Personal Private Server Umbrel](https://www.decredmagazine.com/personal-private-server-umbrel/) by @phoenixgreen
+- [Decred vs Monero: Clash of privacy coins](https://www.decredmagazine.com/decred-vs-monero-clash-of-privacy-coins/) by @Joao
+- [Decred’s Bison Relay helps users monetize all types of content](https://www.decredmagazine.com/decreds-bison-relay-helps-users-monetize-all-types-of-content/) by @HassanMaishera
+- [Decred a year in review (2022)](https://www.decredmagazine.com/decred-a-year-in-review-2022/) by @phoenixgreen
+
+Decred Magazine now also mirrors [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/)!
+
+{ DM stats }
 
 **Videos:**
 
