Media add Audio Twitter Spaces

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -502,7 +502,13 @@ Decred Magazine now also mirrors [Politeia Digest](https://www.decredmagazine.co
 
 **Audio:**
 
-- {}
+Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Spaces:
+
+- [2023: The Year of the Privacy Coin?](https://twitter.com/i/spaces/1YqKDobzqoOxV) feat. Monero community members (also on [Anchor](https://anchor.fm/decred-magazine/episodes/2023-The-Year-of-the-Privacy-Coin-e1t4mst) + an edited version on [YouTube](https://www.youtube.com/watch?v=5ttufSLhsE0))
+- [Privacy Tools for a Sovereign Age](https://twitter.com/i/spaces/1jMJgLyXXEyxL) feat. Decred and Monery community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
+- [5 Proposals Up General Discussion](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - speaking with proposal submitters and the community about the latest batch of proposals. ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
+- [Why Privacy is Critical for a Fully Functional Currency](https://twitter.com/i/spaces/1YqJDoDNrnzGV) feat. Firo Co-Founder [Reuben Yap](https://twitter.com/reubenyap) ([Anchor](https://anchor.fm/decred-magazine/episodes/Why-Privacy-is-Critical-for-a-Fully-Functional-Currency---Decred--Firo-Twitter-Space-e1u52o8))
+- [DCR Proposals Space](https://twitter.com/i/spaces/1jMKgLAlLXgGL) - second chat with proposal owners to discuss their aims and outcomes. ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
 
 **Art and fun:**
 
