Media Art mention Dajana's Twitter + add

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -512,7 +512,8 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 
 **Art and fun:**
 
-- [Bison Relay TikTok promo](https://twitter.com/exitusdcr/status/1620123207251681280)
+- [Bison Relay TikTok promo](https://twitter.com/exitusdcr/status/1620123207251681280) feat. [@DajanaDcr](https://twitter.com/DajanaDcr)
+- [Decred strikes again](https://www.decredmagazine.com/decred-strikes-again/) by @OfficialCryptos
 
 **Translations:**
 
