Add from Twitter scan

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -236,7 +236,7 @@ Other stuff:
 
 - { What happens when you send a message https://twitter.com/BisonDigest/status/1609882842871500804 - here or in (Media OR Discussions) or in both places? }
 - { check https://twitter.net/BisonDigest for Jan goodies }
-- Two-way Bison Relay to Matrix bridge is live in #br, #random and #trading chat rooms.
+- Two-way Bison Relay to Matrix bridge [is live](https://twitter.com/behindtext/status/1615452002502205454) in #br, #random and #trading chat rooms.
 
 
 ### Timestamply
@@ -265,7 +265,7 @@ The [proposal](https://proposals.decred.org/record/855a506) to fund the new vers
 
 ### Other
 
-- { _Smaller/common things go here._ }
+- [Bug Bounty](https://bounty.decred.org/) program [reported](https://twitter.com/JamieHoldstock/status/1611641784127430657) that 20 reports have been processed in 6 months of the latest proposal led by @jholdstock. Only one was severe enough to warrant a payout.
 
 { _Check for new/updated repos in:_
 
@@ -515,13 +515,17 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 - [Bison Relay TikTok promo](https://twitter.com/exitusdcr/status/1620123207251681280) feat. [@DajanaDcr](https://twitter.com/DajanaDcr)
 - [Decred strikes again](https://www.decredmagazine.com/decred-strikes-again/) by @OfficialCryptos
 
+**Other**:
+
+- Educational [thread](https://twitter.com/toddfmaki/status/1616283326490497025) by @toddfmaki about Decred Voting Service Providers
+
 **Translations:**
 
 - {}
 
 **Non-English content:**
 
-- {}
+- [Bison Relay: The Sovereign Internet](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) - [in Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/Bison%20Relay:%20The%20Sovereign%20Internet.md) by @Dominic ([tweet](https://twitter.com/wanbihou/status/1604010848745230336))
 
 
 ## Discussions
