Add from quick Matrix scan
Sadly no time for a thorough scan.

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -470,9 +470,6 @@ Secured the following media placements:
 
 - https://twitter.com/decredproject
 - https://www.reddit.com/r/decred/new/
-- Matrix #media
-- Matrix #marketing
-- Matrix #general
 
 }
 
@@ -485,9 +482,9 @@ Secured the following media placements:
 - [Decred’s Bison Relay helps users monetize all types of content](https://www.decredmagazine.com/decreds-bison-relay-helps-users-monetize-all-types-of-content/) by @HassanMaishera
 - [Decred a year in review (2022)](https://www.decredmagazine.com/decred-a-year-in-review-2022/) by @phoenixgreen
 
-Decred Magazine now also mirrors [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/)!
-
 { DM stats }
+
+Trivia: Decred Magazine mirrors [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/), has an [RSS feed](https://www.decredmagazine.com/rss/), and an [Instagram account](https://instagram.com/decredmagazine).
 
 **Videos:**
 
@@ -520,6 +517,7 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 **Other**:
 
 - Educational [thread](https://twitter.com/toddfmaki/status/1616283326490497025) by @toddfmaki about Decred Voting Service Providers
+- [@BisonDigest](https://twitter.com/BisonDigest) is a new Twitter account for reposting selected good content from Bison Relay.
 
 **Translations:**
 
@@ -533,6 +531,7 @@ Tivra aka [@WasPraxis](https://twitter.com/WasPraxis) organized 5 new Twitter Sp
 
 - [DiscussionCan anything surpass bitcoin as the main store of value crypto?](https://www.reddit.com/r/decred/comments/103dkbu/can_anything_surpass_bitcoin_as_the_main_store_of/)
 - [Brainstorming an idea for DCR paper notes](https://www.reddit.com/r/decred/comments/10m8y6r/decred_notes_idea/)
+- [Why RBF (Replace By Fee) is worse than CPFP (Child Pays For Parent)](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$0a-UUBBdWAG0y7spLPr5TD42Q__uSV_mEbnEbAs9wtQ?via=decred.org&via=matrix.org&via=planetdecred.org). TL;DR RBF allows double spends and only the sender can accelerate a low-fee transaction. CPFP does not allow double spends and allows both sender and recipient to speed up the tx.
 
 
 ## Markets
