--- a/journal/202301.md
+++ b/journal/202301.md
@@ -295,7 +295,9 @@ Community stats as of Feb 2 (compared to Jan 4):
 
 In January the new [treasury](https://dcrdata.decred.org/treasury) received 8,564 DCR worth $189K at January's average rate of $22.05. 
 
-The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported last month as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) and voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote.
+The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported last month as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) and voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote. In total it spent 3,907 DCR worth approx. $86K at November's billing rate of $21.92.
+
+All spend transactions from the new treasury can be found [here](https://dcrdata.decred.org/treasury?txntype=tspend).
 
 { _^ we mentioned this tspend in 202212 but adding here with more detail since it was mined on Jan 3, plus it adds some clarity on the process. actually we have 2 events to report on: tspend published for voting and tspend mined, going forward we can tweak wording to reflect that precisely_ }
 
@@ -307,7 +309,7 @@ The [treasury spend tx]({}) had {} outputs making payments to contractors, rangi
 
 { _Other interesting facts/stories about the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Jan 30, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 840K DCR ($19.4 million USD at $23.03).
 
 { _High-level recap of decision-making activity and most important events._ }
 
