--- a/journal/202301.md
+++ b/journal/202301.md
@@ -293,7 +293,7 @@ Community stats as of Feb 2 (compared to Jan 4):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In January the new [treasury](https://dcrdata.decred.org/treasury) received 8,564 DCR worth $189K at January's average rate of $22.05. 
+In January the new [treasury](https://dcrdata.decred.org/treasury) received 8,564 DCR worth $189K at January's average rate of $22.05.
 
 The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported last month as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) and voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote. In total it spent 3,907 DCR worth approx. $86K at November's billing rate of $21.92.
 
@@ -313,20 +313,20 @@ As of Jan 30, combined balance of [legacy](https://dcrdata.decred.org/address/Dc
 
 { _High-level recap of decision-making activity and most important events._ }
 
-There were eight proposals published on Politeia in January.
+There were 8 proposals published on Politeia in January.
 
-- The [Decred Video Content 2023](https://proposals.decred.org/record/56a439a) proposal requested a budget of $45,600 to continue producing video content, including @Decred Society's "Decred and the state of the market" livestream, @Exitus' News Updates, @Karamble's video/gif animations @Tivra's Twitter spaces. It was approved with 83% Yes votes and 55% turnout.
+- The [Decred Video Content 2023](https://proposals.decred.org/record/56a439a) proposal requested a budget of $45,600 to continue producing video content, including @DecredSociety's "Decred and the state of the market" livestream, @Exitus' News Updates, @karamble's video/gif animations, and @Tivra's Twitter Spaces. It was approved with 83% Yes votes and 55% turnout.
 - The [Decred Arabia Communications and Content 2023](https://proposals.decred.org/record/5b975ba) proposal requested a budget of $13,000 to continue the team's efforts for another year, it was approved with 75% Yes votes and 49% turnout.
 - The [DCRDEX integration on Umbrel](https://proposals.decred.org/record/8d83046) proposal requested a budget of $1,960 to integrate DCRDEX with Umbrel, a remote server admin suite, making it much easier for Umbrel users to install DCRDEX. The proposal was approved with 84% Yes votes and 47% turnout.
 - The [Decred Content and Asset Translations 2023](https://proposals.decred.org/record/31c4b5f) proposal requested a budget of $33,000 for a year of translation work, it was approved with 88% Yes votes and turnout of 44%.
-- The [Timestamply](https://proposals.decred.org/record/855a506) proposal requested $17,300 for work done on a web application for the DCR Timestamp Service, it was approved with 88% Yes votes and turnout of 48%. 
+- The [Timestamply](https://proposals.decred.org/record/855a506) proposal requested $17,300 for work done on a web application for the DCR Timestamp Service, it was approved with 88% Yes votes and turnout of 48%.
 - The [DCRDEX integration on Umbrel](https://proposals.decred.org/record/8d83046) proposal requested a budget of $1,960 for integrating DCRDEX with the Umbrel platform for self hosting open source software, it was approved with 84% Yes votes and turnout of 47%.
 - The [Rick Red Revival: Research and assorted other tasks](https://proposals.decred.org/record/f12258b) proposal requested a budget of $32,500 for a mix of contribution types by @richardred: research, testing, software write-ups, Politeia moderation, funny stuff and miscellaneous helping out. The proposal was rejected with 56% Yes votes and turnout of 30%.
 - The [Alphaday Grant Application](https://proposals.decred.org/record/49793bf) proposal requested $2,400 to build a dashboard which would gather various types of information about Decred in one place, it was rejected with 17% Yes votes and turnout of 25%.
 - The [Sponsorship in Motorsports](https://proposals.decred.org/record/2b19c56) proposal requested $26,033 for full car sponsorship of a Honda Civic Type R in a series of race events, it was rejected with 9% approval and turnout of 22%.
 - { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
-See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055/) and [issue 56](https://blockcommons.red/politeia-digest/issue056/) for more details on the month's proposals. 
+See Politeia Digest [issue 55](https://blockcommons.red/politeia-digest/issue055/) and [issue 56](https://blockcommons.red/politeia-digest/issue056/) for more details on the month's proposals.
 
 
 ## Network
